Adding more border styles, dashed, dotted, thich

--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
       </div>
       <fieldset class="form-group">
         <legend>Some Radio Buttons</legend>
-        <label for="paperRadios1" class="paper-radio"> 
+        <label for="paperRadios1" class="paper-radio">
           <input type="radio" name="paperRadios" id="paperRadios1" value="option 1"> <span>This is the first option<span>
         </label>
-        <label for="paperRadios2" class="paper-radio"> 
+        <label for="paperRadios2" class="paper-radio">
           <input type="radio" name="paperRadios" id="paperRadios2" value="option 2"> <span>This is the second option<span>
         </label>
       </fieldset>
@@ -292,10 +292,10 @@
 &lt;/div&gt;
 &lt;fieldset class="form-group"&gt;
   &lt;legend&gt;Some Radio Buttons&lt;/legend&gt;
-  &lt;label for="paperRadios1" class="paper-radio"&gt; 
+  &lt;label for="paperRadios1" class="paper-radio"&gt;
     &lt;input type="radio" name="paperRadios" id="paperRadios1" value="option 1"&gt; &lt;span&gt;This is the first option&lt;span&gt;
   &lt;/label&gt;
-  &lt;label for="paperRadios2" class="paper-radio"&gt; 
+  &lt;label for="paperRadios2" class="paper-radio"&gt;
     &lt;input type="radio" name="paperRadios" id="paperRadios2" value="option 2"&gt; &lt;span&gt;This is the second option&lt;span&gt;
   &lt;/label&gt;
 &lt;/fieldset&gt;
@@ -661,7 +661,7 @@ function add(x, y) {
   &lt;div class="sm-2 col border border-warning"&gt;Border warning&lt;/div&gt;
   &lt;div class="sm-2 col border border-danger"&gt;Border danger&lt;/div&gt;
   &lt;div class="sm-2 col border background-primary border-white"&gt;Border white&lt;/div&gt;
-&lt;/div&gt;      
+&lt;/div&gt;
 &lt;div class="row child-borders"&gt;
   &lt;div class="sm-2 col border border-primary"&gt;Border primary&lt;/div&gt;
   &lt;div class="sm-2 col border border-secondary"&gt;Border secondary&lt;/div&gt;
@@ -690,6 +690,22 @@ function add(x, y) {
   &lt;div class="sm-2 col"&gt;4&lt;/div&gt;
   &lt;div class="sm-2 col"&gt;5&lt;/div&gt;
   &lt;div class="sm-2 col"&gt;6&lt;/div&gt;
+&lt;/div&gt;</pre>
+      </div>
+      <h4>Border Styles</h4>
+      <div class="row flex-spaces child-borders">
+        <div class="sm-3 col border-dashed">Dashed</div>
+        <div class="sm-3 col border-dotted">Dotted</div>
+        <div class="sm-3 col border-dashed border-thick">Dashed Thick</div>
+        <div class="sm-3 col border-dotted border-thick">Dotted Thick</div>
+      </div>
+      <div class="docs">
+        <pre>
+&lt;div class="row flex-spaces child-borders"&gt;
+  &lt;div class="sm-3 col border-dashed"&gt;Dashed&lt;/div&gt;
+  &lt;div class="sm-3 col border-dotted"&gt;Dotted&lt;/div&gt;
+  &lt;div class="sm-3 col border-dashed border-thick"&gt;Dashed Thick&lt;/div&gt;
+  &lt;div class="sm-3 col border-dotted border-thick"&gt;Dotted Thick&lt;/div&gt;
 &lt;/div&gt;</pre>
       </div>
       <h4>Shadows</h4>
