Added default card, more types to come

--- a/index.html
+++ b/index.html
@@ -582,6 +582,39 @@ function add(x, y) {
 &lt;button popover="Popover on top" popover-position="top"&gt;Popover on top and on a button!&lt;/button&gt;</pre>
       </div>
     </div>
+
+    <div class="section">
+      <h2>Cards</h2>
+
+      <h4>Default card</h4>
+      <div class="row flex-center">
+        <div class="card" style="width: 20rem;">
+          <img src="https://picsum.photos/768" alt="Card example image">
+          
+          <div class="card-body">
+            <h4 class="card-title">My awesome Paper card!</h4>
+            <h5 class="card-subtitle">Nice looking subtitle.</h5>
+            <p class="card-text">Notice that the card width in this example have been set to 20rem, otherwise it will try to fill the current container/row where the card is.</p>
+            <button>Let me go here!</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="docs">
+        <pre>
+&lt;div class="card" style="width: 20rem;"&gt;
+  &lt;img src="https://picsum.photos/768" alt="Card example image"&gt;
+
+  &lt;div class="card-body"&gt;
+    &lt;h4 class="card-title"&gt;My awesome Paper card!&lt;/h4&gt;
+    &lt;h5 class="card-subtitle"&gt;Nice looking subtitle.&lt;/h5&gt;
+    &lt;p class="card-text"&gt;Notice that the card width in this example have been set to 20rem, otherwise it will try to fill the current container/row where the card is.&lt;/p&gt;
+    &lt;button&gt;Let me go here!&lt;/button&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
+      </div>
+    </div>
+
     <div class="section">
       <h2>Colors</h2>
       <h4>Text</h4>
