Add text-muted class

--- a/index.html
+++ b/index.html
@@ -699,13 +699,15 @@ function add(x, y) {
       <p class="text-success">Text success</p>
       <p class="text-warning">Text warning</p>
       <p class="text-danger">Text danger</p>
+      <p class="text-muted">Text muted</p>
       <div class="docs">
         <pre>
 &lt;p class=&quot;text-primary&quot;&gt;Text primary&lt;/p&gt;
 &lt;p class=&quot;text-secondary&quot;&gt;Text secondary&lt;/p&gt;
 &lt;p class=&quot;text-success&quot;&gt;Text success&lt;/p&gt;
 &lt;p class=&quot;text-warning&quot;&gt;Text warning&lt;/p&gt;
-&lt;p class=&quot;text-danger&quot;&gt;Text danger&lt;/p&gt; </pre>
+&lt;p class=&quot;text-danger&quot;&gt;Text danger&lt;/p&gt;
+&lt;p class="text-muted"&gt;Text muted&lt;/p&gt; </pre>
       </div>
       <h4>Backgrounds</h4>
       <div class="row flex-center">
