Add header/footer and card hover box-shadow

--- a/index.html
+++ b/index.html
@@ -641,7 +641,6 @@ function add(x, y) {
       </div>
 
       <h4>Image on top or bottom</h4>
-      <p></p>
       <div class="row flex-center">
         <div class="card" style="width: 20rem;">
           <div class="card-body">
@@ -665,6 +664,20 @@ function add(x, y) {
   &lt;/div&gt;
   &lt;img class="image-bottom" src="http://via.placeholder.com/550x250" alt="Card example image"&gt;
 &lt;/div&gt;</pre>
+      </div>
+
+      <h4>Header and footer</h4>
+      <div class="row flex-center">
+        <div class="card" style="width: 20rem;">
+          <div class="card-header">Header</div>
+          <div class="card-body">
+            <h4 class="card-title">My awesome Paper card!</h4>
+            <h5 class="card-subtitle">Nice looking subtitle.</h5>
+            <p class="card-text">You can also place image on the bottom of the card.</p>
+            <button>Let me go here!</button>
+          </div>
+          <div class="card-footer">Footer</div>
+        </div>
       </div>
     </div>
 
