--- a/index.html
+++ b/index.html
@@ -679,6 +679,21 @@ function add(x, y) {
           <div class="card-footer">Footer</div>
         </div>
       </div>
+
+      <div class="docs">
+<pre>
+&lt;div class="card" style="width: 20rem;"&gt;
+  &lt;div class="card-header"&gt;Header&lt;/div&gt;
+    &lt;div class="card-body"&gt;
+      &lt;h4 class="card-title"&gt;My awesome Paper card!&lt;/h4&gt;
+      &lt;h5 class="card-subtitle"&gt;Nice looking subtitle.&lt;/h5&gt;
+      &lt;p class="card-text"&gt;You can also place image on the bottom of the card.&lt;/p&gt;
+      &lt;button&gt;Let me go here!&lt;/button&gt;
+    &lt;/div&gt;
+  &lt;div class="card-footer"&gt;Footer&lt;/div&gt;
+&lt;/div&gt;
+</pre>
+      </div>
     </div>
 
     <div class="section">
