--- a/index.html
+++ b/index.html
@@ -2,27 +2,46 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <title>PaperCSS · the less formal CSS framework</title>
+
+  <meta name="description" content="The less formal CSS framework.">
+  <meta name="author" content="Rhyneav and PaperCSS contributors.">
+
+  <!-- Twitter -->
+  <meta name="twitter:description" content="The less formal CSS framework">
+  <meta name="twitter:title" content="PaperCSS">
+
+  <!-- OpenGraph -->
+  <meta property="og:url" content="https://www.getpapercss.com/">
+  <meta property="og:title" content="PaperCSS">
+  <meta property="og:description" content="The less formal CSS framework">
+
+  <!-- Styles -->
   <link rel="stylesheet" href="/dist/paper.css">
   <link rel="stylesheet" href="/demo.css">
 </head>
 
 <body>
   <div class="container paper">
+
     <div class="demo-title">
       <div class="row flex-center">
         <div class="text-center">
           <h1>PaperCSS</h1>
-          <h3>the less formal css framework</h3>
+          <h3>the less formal CSS framework</h3>
         </div>
       </div>
       <div class="row flex-center child-borders">
         <a href="#download" class="paper-btn margin">Download</a>
         <a href="#flexbox" class="paper-btn margin">Docs</a>
         <a href="#about" class="paper-btn margin">About</a>
-        <a href="https://github.com/rhyneav/papercss" class="paper-btn margin">Github</a>
+        <a href="https://github.com/rhyneav/papercss" target="_blank" class="paper-btn margin">Github</a>
       </div>
     </div>
+
     <div id="flexbox" class="section">
       <h2>Flexbox</h2>
       <h4>Flexgrid</h4>
