Fix utilities link from summary

--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@ function add(x, y) {
 &lt;/div&gt;</pre>
       </div>
     </div>
-    <div class="section">
+    <div id="utilities" class="section">
       <h2>Utilities</h2>
       <h4>Margin</h4>
       <div class="row flex-spaces child-borders">
