Adding cards and badges to the summary

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <title>PaperCSS · the less formal CSS framework</title>
 
   <meta name="description" content="The less formal CSS framework.">
@@ -53,6 +53,8 @@
         <li><a href="#code">Code</a></li>
         <li><a href="#tables">Tables</a></li>
         <li><a href="#popovers">Popovers</a></li>
+        <li><a href="#cards">Cards</a></li>
+        <li><a href="#badges">Badges</a></li>
         <li><a href="#colors">Colors</a></li>
         <li><a href="#borders">Borders & shadows</a></li>
         <li><a href="#utilities">Utilities</a></li>
@@ -632,7 +634,7 @@ function add(x, y) {
 &lt;button popover="Popover on top" popover-position="top"&gt;Popover on top and on a button!&lt;/button&gt;</pre>
       </div>
     </div>
-          
+
     <div id="colors" class="section">
     <div class="section">
       <h2>Cards</h2>
