--- a/index.html
+++ b/index.html
@@ -635,8 +635,7 @@ function add(x, y) {
       </div>
     </div>
 
-    <div id="colors" class="section">
-    <div class="section">
+    <div id="cards" class="section">
       <h2>Cards</h2>
       <h4>Full card example</h4>
       <p>It is possible to not put all the sub-classes like card-title, card-subtitle, card-text, ... But instead the framework will recognize the element properly if it's a h4, h5, p, ... And you need to put all this content on a div with card class.</p>
@@ -749,7 +748,7 @@ function add(x, y) {
       </div>
     </div>
 
-    <div class="section">
+    <div id="badges" class="section">
       <h2>Badges</h2>
       <h4>Default</h4>
       <p>You can customize badges colors with secondary, success, warning, danger classes.</p>
