--- a/index.html
+++ b/index.html
@@ -1041,13 +1041,47 @@ function add(x, y) {
         </div>
     </div>
     <div class="section">
-      <h2 id="download">Download</h2>
+      <h2 id="download">Download and Link</h2>
+      <h4>Download</h4>
       <p>Download the latest version (1.1.0) using either of the links below. Or download an older release via Github.</p>
       <div class="row flex-spaces text-center">
         <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases/download/v1.1.0/paper.css">CSS File</a>
         <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases/download/v1.1.0/paper.min.css">Minified CSS File</a>
         <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases">Github Releases</a>
       </div>
+      <h4>NPM</h4>
+      <p>PaperCSS is now available on NPM as of version 1.1.0. Install with <code>npm install papercss --save</code> and find the CSS in:</p>
+      <ul>
+        <li>node_modules/papercss/dist/paper.css</li>
+        <li>node_modules/papercss/dist/paper.min.css</li>
+      </ul>
+      <h4>CDN</h4>
+      <p>Don't want to download it? That's cool. You can just link to PaperCSS via <a href="https://unpkg.com/#/">unpkg's CDN</a>. You can use either:</p>
+      <ul>
+        <li><a href="https://unpkg.com/papercss@1.1.0/dist/paper.css">https://unpkg.com/papercss@1.1.0/dist/paper.css</a></li>
+        <li><a href="https://unpkg.com/papercss@1.1.0/dist/paper.min.css">https://unpkg.com/papercss@1.1.0/dist/paper.min.css</a></li>
+      </ul>
+      <p>Here's a quck snippet to get started with PaperCSS:</p>
+      <div class="docs">
+        <pre>
+&lt;!DOCTYPE html&gt;
+&lt;html lang=&quot;en&quot;&gt;
+&lt;head&gt;
+  &lt;meta charset=&quot;UTF-8&quot;&gt;
+  &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+  &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;ie=edge&quot;&gt;
+  &lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/papercss@1.1.0/dist/paper.min.css&quot;&gt;
+  &lt;title&gt;Document&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+  &lt;div class=&quot;paper container&quot;&gt;
+    &lt;h1&gt;Some Fresh Title&lt;/h1&gt;
+    &lt;p&gt;This is where some content would go.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/body&gt;
+&lt;/html&gt;</pre>
+      </div>
+      <h4>Build it Yourself</h4>
       <p>If you'd rather customize things, you can build the CSS yourself via the git repo</p>
       <ol>
         <li><code>git clone [repo url]</code></li>
@@ -1065,7 +1099,7 @@ function add(x, y) {
       <p>If you are new to Git or Less, this would be a great project to get your feet wet with. I'd be happy to help walk you through the pull request process. Check out the Git repo for more info!</p>
     </div>
     <div class="row flex-right">
-      <p>Made with 💛 by <a href="https://vlaservi.ch" target="_blank">Rhyne</a></p>
+      <p>Made with 💛 by <a href="https://vlaservi.ch" target="_blank">Rhyne</a> and some <a href="https://github.com/rhyneav/papercss/graphs/contributors">fantastic contributors</a>!</p>
     </div>
   </div>
 </body>
