Created and added favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <title>PaperCSS · the less formal CSS framework</title>
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+
   <meta name="description" content="The less formal CSS framework.">
   <meta name="author" content="Rhyneav and PaperCSS contributors.">
 
