--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
 </head>
 
 <body>
+
   <div class="container paper">
+
+    <!-- Topnav START -->
+    <div class="topnav" id="myTopnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
+    <!-- Topnav END -->
 
     <div class="demo-title">
       <div class="row flex-center">
@@ -34,6 +45,7 @@
           <h3>the less formal CSS framework</h3>
         </div>
       </div>
+
 
       <div class="row flex-center child-borders">
         <a href="#download" class="paper-btn margin">Download</a>
@@ -1118,6 +1130,17 @@ function add(x, y) {
       <p>Made with 💛 by <a href="https://vlaservi.ch" target="_blank">Rhyne</a> and some <a href="https://github.com/rhyneav/papercss/graphs/contributors">fantastic contributors</a>!</p>
     </div>
   </div>
+  <script>
+    /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+          x.className += " responsive";
+      } else {
+          x.className = "topnav";
+      }
+    }
+  </script>
 </body>
 
 </html>
