--- a/index.html
+++ b/index.html
@@ -300,6 +300,10 @@
           <input type="text" placeholder="Disabled" disabled>
       </div>
       <div class="form-group">
+        <label>Large Input</label>
+        <textarea placeholder="Large input"></textarea>
+      </div>
+      <div class="form-group">
         <label>Select</label>
         <select>
           <option value="1">Option 1</option>
@@ -348,6 +352,10 @@
 &lt;div class="form-group"&gt;
   &lt;label&gt;Disabled&lt;/label&gt;
   &lt;input type="text" placeholder="Disabled" disabled&gt;
+&lt;/div&gt;
+&lt;div class="form-group"&gt;
+&lt;label&gt;Large Input&lt;/label&gt;
+&lt;textarea placeholder="Large input"&gt; &lt;/textarea&gt;
 &lt;/div&gt;
 &lt;div class="form-group"&gt;
   &lt;label&gt;Select&lt;/label&gt;
