--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@ function add(x, y) {
             <p class="card-text">You can also place image on the bottom of the card.</p>
             <button>Let me go here!</button>
           </div>
-          <img class="image-bottom" src="http://via.placeholder.com/550x250" alt="Card example image">
+          <img class="image-bottom" src="https://unsplash.it/550/250" alt="Card example image">
         </div>
       </div>
 
@@ -728,7 +728,7 @@ function add(x, y) {
     &lt;p class="card-text"&gt;You can also place image on the bottom of the card.&lt;/p&gt;
     &lt;button&gt;Let me go here!&lt;/button&gt;
   &lt;/div&gt;
-  &lt;img class="image-bottom" src="http://via.placeholder.com/550x250" alt="Card example image"&gt;
+  &lt;img class="image-bottom" src="https://unsplash.it/550/250" alt="Card example image"&gt;
 &lt;/div&gt;</pre>
       </div>
 
