added second version with flat buttons

--- a/index.html
+++ b/index.html
@@ -27,12 +27,25 @@
 <body>
 
   <div class="container paper">
+    <!-- Alternative menu FLAT -->
+    <!-- <div class="paper-navbar">
+      <label for="show-menu" class="show-menu nav-link-flat">&#9776;</label>
+      <input type="checkbox" id="show-menu" class="menu-checkbox" role="button"></input>
+      <ul id="menu" class="paper-nav flat">
+        <li><a href="#" class="active  nav-link-flat">Home</a></li>
+        <li><a href="#" class=" nav-link-flat">About ￬</a></li>
+        <li><a href="#" class=" nav-link-flat">Portfolio ￬</a></li>
+        <li><a href="#" class=" nav-link-flat">News</a></li>
+        <li><a href="#" class=" nav-link-flat">Contact</a></li>
+      </ul>
+    </div> -->
+
 
     <div class="paper-navbar">
-      <label for="show-menu" class="show-menu paper-btn">&#9776;</label>
-      <input type="checkbox" id="show-menu" class="menu-checkbox" role="button"></input>
-      <ul id="menu" class="paper-nav">
-        <li><a href="#" class="paper-btn btn-small home-icon"></a></li>
+      <label for="show-menu2" class="show-menu paper-btn">&#9776;</label>
+      <input type="checkbox" id="show-menu2" class="menu-checkbox" role="button"></input>
+      <ul id="menu2" class="paper-nav">
+        <li><a href="#" class="active home-icon paper-btn btn-small"></a></li>
         <li><a href="#" class="paper-btn btn-small">About ￬</a></li>
         <li><a href="#" class="paper-btn btn-small">Portfolio ￬</a></li>
         <li><a href="#" class="paper-btn btn-small">News</a></li>
