--- a/index.html
+++ b/index.html
@@ -304,6 +304,10 @@
         <textarea placeholder="Large input"></textarea>
       </div>
       <div class="form-group">
+          <label>No Resize</label>
+          <textarea class="no-resize" placeholder="No resize"></textarea>
+      </div>
+      <div class="form-group">
         <label>Select</label>
         <select>
           <option value="1">Option 1</option>
@@ -356,6 +360,10 @@
 &lt;div class="form-group"&gt;
 &lt;label&gt;Large Input&lt;/label&gt;
 &lt;textarea placeholder="Large input"&gt; &lt;/textarea&gt;
+&lt;/div&gt;
+&lt;div class="form-group"&gt;
+&lt;label&gt;No Resize&lt;/label&gt;
+&lt;textarea class="no-resize" placeholder="No resize"&gt; &lt;/textarea&gt;
 &lt;/div&gt;
 &lt;div class="form-group"&gt;
   &lt;label&gt;Select&lt;/label&gt;
