--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
   <div class="container paper">
 
-    <div class="paper-navbar">
-      <label for="show-menu2" class="show-menu paper-btn">&#9776;</label>
-      <input type="checkbox" id="show-menu2" class="menu-checkbox" role="button"></input>
-      <ul id="menu2" class="paper-nav">
-        <li><a href="#" class="active home-icon paper-btn btn-small"></a></li>
-        <li><a href="#" class="paper-btn btn-small">About ￬</a></li>
-        <li><a href="#" class="paper-btn btn-small">Portfolio ￬</a></li>
-        <li><a href="#" class="paper-btn btn-small">News</a></li>
-        <li><a href="#" class="paper-btn btn-small">Contact</a></li>
+    <nav>
+      <label for="menu-toggle">&#9776;</label>
+      <input type="checkbox" id="menu-toggle" role="button"></input>
+      <ul>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
-    </div>
+    </nav>
 
     <div class="demo-title">
 
