Fix for overflow x-axis in mobile view

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 
 <body>
-  <div class="container paper">
-
+  <div class="container">
+    <div class=" paper">
     <div class="demo-title">
       <div class="row flex-center">
         <div class="text-center">
@@ -1102,6 +1102,7 @@ function add(x, y) {
       <p>Made with 💛 by <a href="https://vlaservi.ch" target="_blank">Rhyne</a> and some <a href="https://github.com/rhyneav/papercss/graphs/contributors">fantastic contributors</a>!</p>
     </div>
   </div>
+</div>
 </body>
 
 </html>
