--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <li><a href="#utilities">Utilities</a></li>
         <li><a href="#images">Images</a></li>
         <li><a href="#alerts">Alerts</a></li>
+        <li><a href="#article">Article</a></li>
       </ul>
     </div>
 
@@ -1076,6 +1077,47 @@ function add(x, y) {
   &lt;/div&gt;</pre>
         </div>
     </div>
+
+
+
+    <div id="article" class="section">
+      <h2>Article</h2>
+      
+      <article class="article">
+        <h1 class="article-title"><a href="">Article Title</a></h1>
+        <p class="article-meta">Written by <a href="#">Super User</a> on 24 November 2017. Posted in <a href="#">Blog</a></p>
+        <p class="text-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur repellendus excepturi, consequatur illo rerum, non sint asperiores dolore sapiente, vitae blanditiis. Officiis at quaerat modi earum, fugiat magni impedit, aperiam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti iure totam nam debitis aliquid impedit, et quas omnis aspernatur optio molestias ex laborum quia. Ducimus culpa tempore, veritatis officia delectus dolore dignissimos reprehenderit vero, sunt odit placeat est non molestiae ipsa nam velit in iusto hic quasi similique facere. Maxime?</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti iure totam nam debitis aliquid impedit, et quas omnis aspernatur optio molestias ex laborum quia. Ducimus culpa tempore, veritatis officia delectus dolore dignissimos reprehenderit vero, sunt odit placeat est non molestiae ipsa nam velit in iusto hic quasi similique facere. Maxime?</p>
+
+        <div class="row">
+          <button>Read More</button>
+          <button>5 Comments</button>
+        </div>
+      </article>
+
+      <div class="docs">
+        <pre>
+&lt;article class="article"&gt;
+  &lt;h1 class="article-title"&gt;&lt;a href=""&gt;Article Title&lt;/a&gt;&lt;/h1&gt;
+  &lt;p class="article-meta"&gt;Written by &lt;a href="#"&gt;Super User&lt;/a&gt;&lt;/p&gt;
+  &lt;p class="text-lead"&gt; Lorem... &lt;/p&gt;
+  &lt;p&gt;Lorem...&lt;/p&gt;
+
+  &lt;div class="row"&gt;
+    &lt;button&gt;Read More&lt;/button&gt;
+    &lt;button&gt;5 Comments&lt;/button&gt;
+  &lt;/div&gt;
+&lt;/article&gt;
+        </pre>
+      </div>
+    </div>
+
+
+
+
+
     <div class="section">
       <h2 id="download">Download and Link</h2>
       <h4>Download</h4>
