--- a/index.html
+++ b/index.html
@@ -1074,9 +1074,11 @@ function add(x, y) {
   &lt;title&gt;Document&lt;/title&gt;
 &lt;/head&gt;
 &lt;body&gt;
-  &lt;div class=&quot;paper container&quot;&gt;
-    &lt;h1&gt;Some Fresh Title&lt;/h1&gt;
-    &lt;p&gt;This is where some content would go.&lt;/p&gt;
+  &lt;div class=&quot;container&quot;&gt;
+    &lt;div class=&quot;paper&quot;&gt;
+      &lt;h1&gt;Some Fresh Title&lt;/h1&gt;
+      &lt;p&gt;This is where some content would go.&lt;/p&gt;
+    &lt;/div&gt;
   &lt;/div&gt;
 &lt;/body&gt;
 &lt;/html&gt;</pre>
