added class for inline list

--- a/index.html
+++ b/index.html
@@ -445,6 +445,13 @@
         </ul>
         <li>And now we're are the top!</li>
       </ul>
+      <h4>Inline List</h4>
+      <ul class="inline">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+      </ul>
       <div class="docs">
         <pre>
 &lt;ol&gt;
