Imprefect Buttons -> Imperfect Buttons

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     </div>
     <div id="buttons" class="section">
       <h2>Buttons</h2>
-      <p>Insprired by <a href="https://codepen.io/tmrDevelops/pen/VeRvKX" target="_blank">Imprefect Buttons</a></p>
+      <p>Insprired by <a href="https://codepen.io/tmrDevelops/pen/VeRvKX" target="_blank">Imperfect Buttons</a></p>
       <button class="btn-large">Large</button>
       <button>Default</button>
       <button class="btn-small">Small</button>
@@ -246,7 +246,7 @@
       <button disabled>Disabled</button>
       <div class="docs">
         <pre>
-&lt;p&gt;Insprired by &lt;a href="https://codepen.io/tmrDevelops/pen/VeRvKX" target="_blank"&gt;Imprefect Buttons&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;Insprired by &lt;a href="https://codepen.io/tmrDevelops/pen/VeRvKX" target="_blank"&gt;Imperfect Buttons&lt;/a&gt;&lt;/p&gt;
 &lt;button class="btn-large"&gt;Large&lt;/button&gt;
 &lt;button&gt;Default&lt;/button&gt;
 &lt;button class="btn-small"&gt;Small&lt;/button&gt;
