Adding new code

--- a/index.html
+++ b/index.html
@@ -270,13 +270,13 @@
       <button class="btn-warning">Warning</button>
       <button class="btn-danger">Danger</button>
       <div class="docs">
-          <pre>
+          <pre><code>
   &lt;input type="button" class="paper-btn btn-primary" value="Primary"/&gt;
   &lt;input type="button" class="btn-secondary" value="Secondary"/&gt;
   &lt;button class="btn-success"&gt;Success&lt;/button&gt;
   &lt;button class="btn-warning"&gt;Warning&lt;/button&gt;
   &lt;button class="btn-danger"&gt;Danger&lt;/button&gt;
-          </pre>
+          </code></pre>
         </div>
     </div>
     <div id="forms" class="section">
@@ -1098,7 +1098,7 @@ function add(x, y) {
       </article>
 
       <div class="docs">
-        <pre>
+        <pre><code>
 &lt;article class="article"&gt;
   &lt;h1 class="article-title"&gt;&lt;a href=""&gt;Article Title&lt;/a&gt;&lt;/h1&gt;
   &lt;p class="article-meta"&gt;Written by &lt;a href="#"&gt;Super User&lt;/a&gt;&lt;/p&gt;
@@ -1110,7 +1110,7 @@ function add(x, y) {
     &lt;button&gt;5 Comments&lt;/button&gt;
   &lt;/div&gt;
 &lt;/article&gt;
-        </pre>
+        </code></pre>
       </div>
     </div>
 
