--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   &lt;button class="btn-success"&gt;Success&lt;/button&gt;
   &lt;button class="btn-warning"&gt;Warning&lt;/button&gt;
   &lt;button class="btn-danger"&gt;Danger&lt;/button&gt;
-          </code></pre>
+</code></pre>
         </div>
     </div>
     <div id="forms" class="section">
@@ -653,7 +653,7 @@ function add(x, y) {
 &lt;p popover-left="Popover on left"&gt;Popover left position&lt;/p&gt;
 &lt;p popover-top="Popover on top"&gt;Popover top position&lt;/p&gt;
 &lt;p popover-bottom="Popover on bottom"&gt;Popover bottom position&lt;/p&gt;
-&lt;p popover-right="Popover on right"&gt;Popover right position&lt;/p&gt;</pre>
+&lt;p popover-right="Popover on right"&gt;Popover right position&lt;/p&gt;</code></pre>
       </div>
 
       <p>But you can also popover on pretty much any element you want, it can be on a button, on a table cell, ...</p>
@@ -666,7 +666,7 @@ function add(x, y) {
 
       <div class="docs">
         <pre><code>
-&lt;button popover-top="Popover on top"&gt;Popover on top and on a button!&lt;/button&gt;</pre>
+&lt;button popover-top="Popover on top"&gt;Popover on top and on a button!&lt;/button&gt;</code></pre>
       </div>
     </div>
           
@@ -1110,7 +1110,7 @@ function add(x, y) {
     &lt;button&gt;5 Comments&lt;/button&gt;
   &lt;/div&gt;
 &lt;/article&gt;
-        </code></pre>
+</code></pre>
       </div>
     </div>
 
