--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
         </div>
       </div>
       <div class="docs">
-          <pre><code>
-&lt;div class=&quot;row&quot;&gt;
+          <pre><code>&lt;div class=&quot;row&quot;&gt;
   &lt;div class=&quot;col-4 col&quot;&gt;col-4 col&lt;/div&gt;
   &lt;div class=&quot;col-4 col&quot;&gt;col-4 col&lt;/div&gt;
   &lt;div class=&quot;col-4 col&quot;&gt;col-4 col&lt;/div&gt;
@@ -224,8 +223,7 @@
         imperdiet sapien nec, interdum fringilla lorem. Morbi sed arcu facilisis, maximus justo vel, porttitor nisl. Nam
         suscipit metus facilisis iaculis vestibulum.</p>
       <div class="docs">
-        <pre><code>
-&lt;h1&gt;Heading 1&lt;/h1&gt;
+        <pre><code>&lt;h1&gt;Heading 1&lt;/h1&gt;
 &lt;h2&gt;Heading 2&lt;/h2&gt;
 &lt;h3&gt;Heading 3&lt;/h3&gt;
 &lt;h4&gt;Heading 4&lt;/h4&gt;
@@ -249,8 +247,7 @@
       <button class="disabled">Disabled</button>
       <button disabled>Disabled</button>
       <div class="docs">
-        <pre><code>
-&lt;p&gt;Insprired by &lt;a href="https://codepen.io/tmrDevelops/pen/VeRvKX" target="_blank"&gt;Imperfect Buttons&lt;/a&gt;&lt;/p&gt;
+        <pre><code>&lt;p&gt;Insprired by &lt;a href="https://codepen.io/tmrDevelops/pen/VeRvKX" target="_blank"&gt;Imperfect Buttons&lt;/a&gt;&lt;/p&gt;
 &lt;button class="btn-large"&gt;Large&lt;/button&gt;
 &lt;button&gt;Default&lt;/button&gt;
 &lt;button class="btn-small"&gt;Small&lt;/button&gt;
@@ -270,8 +267,7 @@
       <button class="btn-warning">Warning</button>
       <button class="btn-danger">Danger</button>
       <div class="docs">
-          <pre><code>
-  &lt;input type="button" class="paper-btn btn-primary" value="Primary"/&gt;
+          <pre><code>  &lt;input type="button" class="paper-btn btn-primary" value="Primary"/&gt;
   &lt;input type="button" class="btn-secondary" value="Secondary"/&gt;
   &lt;button class="btn-success"&gt;Success&lt;/button&gt;
   &lt;button class="btn-warning"&gt;Warning&lt;/button&gt;
@@ -338,8 +334,7 @@
         </label>
       </fieldset>
       <div class="docs">
-        <pre><code>
-&lt;div class="form-group"&gt;
+        <pre><code>&lt;div class="form-group"&gt;
   &lt;label for="paperInputs1"&gt;Input&lt;/label&gt;
   &lt;input type="text" placeholder="Nice input" id="paperInputs1"&gt;
 &lt;/div&gt;
@@ -446,8 +441,7 @@
         <li>And now we're are the top!</li>
       </ul>
       <div class="docs">
-        <pre><code>
-&lt;ol&gt;
+        <pre><code>&lt;ol&gt;
   &lt;li&gt;Do this&lt;/li&gt;
   &lt;li&gt;Then this&lt;/li&gt;
   &lt;li&gt;Finally this&lt;/li&gt;
@@ -484,8 +478,7 @@ function add(x, y) {
   return x + y;
 }     </pre>
       <div class="docs">
-        <pre><code>
-&lt;p&gt;Let's make some pretty &lt;code&gt;&amp;lt;code&amp;gt;&lt;/code&gt;&lt;/p&gt;
+        <pre><code>&lt;p&gt;Let's make some pretty &lt;code&gt;&amp;lt;code&amp;gt;&lt;/code&gt;&lt;/p&gt;
 &lt;p&gt;Print files backwards using &lt;kbd&gt;tac&lt;/kbd&gt;&lt;/p&gt;
 &lt;p&gt;To stop a process, hit &lt;kbd&gt;ctrl + c&lt;/kbd&gt;&lt;/p&gt;
 &lt;pre&gt;
@@ -591,8 +584,7 @@ function add(x, y) {
         </tbody>
       </table>
       <div class="docs">
-        <pre><code>
-&lt;table&gt;
+        <pre><code>&lt;table&gt;
   &lt;thead&gt;
     &lt;tr&gt;
       &lt;th&gt;#&lt;/th&gt;
@@ -649,8 +641,7 @@ function add(x, y) {
       </div>
 
       <div class="docs">
-        <pre><code>
-&lt;p popover-left="Popover on left"&gt;Popover left position&lt;/p&gt;
+        <pre><code>&lt;p popover-left="Popover on left"&gt;Popover left position&lt;/p&gt;
 &lt;p popover-top="Popover on top"&gt;Popover top position&lt;/p&gt;
 &lt;p popover-bottom="Popover on bottom"&gt;Popover bottom position&lt;/p&gt;
 &lt;p popover-right="Popover on right"&gt;Popover right position&lt;/p&gt;</code></pre>
@@ -665,8 +656,7 @@ function add(x, y) {
       </div>
 
       <div class="docs">
-        <pre><code>
-&lt;button popover-top="Popover on top"&gt;Popover on top and on a button!&lt;/button&gt;</code></pre>
+        <pre><code>&lt;button popover-top="Popover on top"&gt;Popover on top and on a button!&lt;/button&gt;</code></pre>
       </div>
     </div>
           
@@ -688,8 +678,7 @@ function add(x, y) {
       </div>
 
       <div class="docs">
-        <pre><code>
-&lt;div class="card" style="width: 20rem;"&gt;
+        <pre><code>&lt;div class="card" style="width: 20rem;"&gt;
   &lt;img src="https://picsum.photos/768" alt="Card example image"&gt;
 
   &lt;div class="card-body"&gt;
@@ -715,8 +704,7 @@ function add(x, y) {
       </div>
 
       <div class="docs">
-        <pre><code>
-&lt;div class="card" style="width: 20rem;"&gt;
+        <pre><code>&lt;div class="card" style="width: 20rem;"&gt;
   &lt;div class="card-body"&gt;
     &lt;h4 class="card-title"&gt;My awesome Paper card!&lt;/h4&gt;
     &lt;h5 class="card-subtitle"&gt;Nice looking subtitle.&lt;/h5&gt;
@@ -741,8 +729,7 @@ function add(x, y) {
       </div>
 
       <div class="docs">
-        <pre><code>
-&lt;div class="card" style="width: 20rem;"&gt;
+        <pre><code>&lt;div class="card" style="width: 20rem;"&gt;
   &lt;div class="card-body"&gt;
     &lt;h4 class="card-title"&gt;My awesome Paper card!&lt;/h4&gt;
     &lt;h5 class="card-subtitle"&gt;Nice looking subtitle.&lt;/h5&gt;
@@ -768,8 +755,7 @@ function add(x, y) {
       </div>
 
       <div class="docs">
-<pre><code>
-&lt;div class="card" style="width: 20rem;"&gt;
+<pre><code>&lt;div class="card" style="width: 20rem;"&gt;
   &lt;div class="card-header"&gt;Header&lt;/div&gt;
     &lt;div class="card-body"&gt;
       &lt;h4 class="card-title"&gt;My awesome Paper card!&lt;/h4&gt;
@@ -796,8 +782,7 @@ function add(x, y) {
       <h6>Example h6 heading <span class="badge">123</span></h6>
 
       <div class="docs">
-        <pre><code>
-&lt;h1&gt;Example h1 heading &lt;span class="badge"&gt;123&lt;/span&gt;&lt;/h1&gt;
+        <pre><code>&lt;h1&gt;Example h1 heading &lt;span class="badge"&gt;123&lt;/span&gt;&lt;/h1&gt;
 &lt;h2&gt;Example h2 heading &lt;span class="badge secondary"&gt;123&lt;/span&gt;&lt;/h2&gt;
 &lt;h3&gt;Example h3 heading &lt;span class="badge success"&gt;123&lt;/span&gt;&lt;/h3&gt;
 &lt;h4&gt;Example h4 heading &lt;span class="badge warning"&gt;123&lt;/span&gt;&lt;/h4&gt;
@@ -816,8 +801,7 @@ function add(x, y) {
       <p class="text-danger">Text danger</p>
       <p class="text-muted">Text muted</p>
       <div class="docs">
-        <pre><code>
-&lt;p class=&quot;text-primary&quot;&gt;Text primary&lt;/p&gt;
+        <pre><code>&lt;p class=&quot;text-primary&quot;&gt;Text primary&lt;/p&gt;
 &lt;p class=&quot;text-secondary&quot;&gt;Text secondary&lt;/p&gt;
 &lt;p class=&quot;text-success&quot;&gt;Text success&lt;/p&gt;
 &lt;p class=&quot;text-warning&quot;&gt;Text warning&lt;/p&gt;
@@ -833,8 +817,7 @@ function add(x, y) {
         <div class="sm-2 col background-danger">Background danger</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class=&quot;row flex-center&quot;&gt;
+        <pre><code>&lt;div class=&quot;row flex-center&quot;&gt;
   &lt;div class=&quot;sm-2 col background-primary&quot;&gt;Background primary&lt;/div&gt;
   &lt;div class=&quot;sm-2 col background-secondary&quot;&gt;Background secondary&lt;/div&gt;
   &lt;div class=&quot;sm-2 col background-success&quot;&gt;Background success&lt;/div&gt;
@@ -857,8 +840,7 @@ function add(x, y) {
         <div class="sm-3 col border border-6 border-primary">Border-6</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class="row flex-spaces"&gt;
+        <pre><code>&lt;div class="row flex-spaces"&gt;
   &lt;div class="sm-3 col border border-primary"&gt;Default Border&lt;/div&gt;
   &lt;div class="sm-3 col border border-2 border-primary"&gt;Border-2&lt;/div&gt;
   &lt;div class="sm-3 col border border-3 border-primary"&gt;Border-3&lt;/div&gt;
@@ -879,8 +861,7 @@ function add(x, y) {
         <div class="sm-2 col border background-primary border-white">Border white</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class="row child-borders"&gt;
+        <pre><code>&lt;div class="row child-borders"&gt;
   &lt;div class="sm-2 col border border-primary"&gt;Border primary&lt;/div&gt;
   &lt;div class="sm-2 col border border-secondary"&gt;Border secondary&lt;/div&gt;
   &lt;div class="sm-2 col border border-success"&gt;Border success&lt;/div&gt;
@@ -908,8 +889,7 @@ function add(x, y) {
         <div class="sm-2 col">6</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class="row flex-center child-borders"&gt;
+        <pre><code>&lt;div class="row flex-center child-borders"&gt;
   &lt;div class="sm-2 col"&gt;1&lt;/div&gt;
   &lt;div class="sm-2 col"&gt;2&lt;/div&gt;
   &lt;div class="sm-2 col"&gt;3&lt;/div&gt;
@@ -926,8 +906,7 @@ function add(x, y) {
         <div class="sm-3 col border-dotted border-thick">Dotted Thick</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class="row flex-spaces child-borders"&gt;
+        <pre><code>&lt;div class="row flex-spaces child-borders"&gt;
   &lt;div class="sm-3 col border-dashed"&gt;Dashed&lt;/div&gt;
   &lt;div class="sm-3 col border-dotted"&gt;Dotted&lt;/div&gt;
   &lt;div class="sm-3 col border-dashed border-thick"&gt;Dashed Thick&lt;/div&gt;
@@ -942,8 +921,7 @@ function add(x, y) {
         <div class="sm-3 col shadow shadow-hover">Hover</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class="row flex-spaces child-borders"&gt;
+        <pre><code>&lt;div class="row flex-spaces child-borders"&gt;
   &lt;div class="sm-3 col shadow shadow-large"&gt;Large&lt;/div&gt;
   &lt;div class="sm-3 col shadow"&gt;Default&lt;/div&gt;
   &lt;div class="sm-3 col shadow shadow-small"&gt;Small&lt;/div&gt;
@@ -958,8 +936,7 @@ function add(x, y) {
         <div class="sm-3 col">Shadow</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class="row flex-spaces child-borders child-shadows"&gt;
+        <pre><code>&lt;div class="row flex-spaces child-borders child-shadows"&gt;
   &lt;div class="sm-3 col"&gt;Shadow&lt;/div&gt;
   &lt;div class="sm-3 col"&gt;Shadow&lt;/div&gt;
   &lt;div class="sm-3 col"&gt;Shadow&lt;/div&gt;
@@ -973,8 +950,7 @@ function add(x, y) {
         <div class="sm-3 col">Shadow</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class="row flex-spaces child-borders child-shadows-hover"&gt;
+        <pre><code>&lt;div class="row flex-spaces child-borders child-shadows-hover"&gt;
   &lt;div class="sm-3 col"&gt;Shadow&lt;/div&gt;
   &lt;div class="sm-3 col"&gt;Shadow&lt;/div&gt;
   &lt;div class="sm-3 col"&gt;Shadow&lt;/div&gt;
@@ -990,8 +966,7 @@ function add(x, y) {
         <div class="sm-3 col margin-top-small">Margin-top-small</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class="row flex-spaces child-borders"&gt;
+        <pre><code>&lt;div class="row flex-spaces child-borders"&gt;
   &lt;div class="sm-3 col margin"&gt;Margin&lt;/div&gt;
   &lt;div class="sm-3 col margin-large"&gt;Margin-large&lt;/div&gt;
   &lt;div class="sm-3 col margin-top-small"&gt;Margin-top-small&lt;/div&gt;
@@ -1004,8 +979,7 @@ function add(x, y) {
         <div class="sm-3 col padding-left-large">Padding-left-large</div>
       </div>
       <div class="docs">
-        <pre><code>
-&lt;div class="row flex-spaces child-borders"&gt;
+        <pre><code>&lt;div class="row flex-spaces child-borders"&gt;
   &lt;div class="sm-3 col padding-small"&gt;Padding-small&lt;/div&gt;
   &lt;div class="sm-3 col padding-none"&gt;Padding-none&lt;/div&gt;
   &lt;div class="sm-3 col padding-left-large"&gt;Padding-left-large&lt;/div&gt;
@@ -1018,8 +992,7 @@ function add(x, y) {
       <p>Images by default are responsive</p>
       <img src="https://unsplash.it/900" alt="Random Unsplash">
       <div class="docs">
-        <pre><code>
-&lt;img src="https://unsplash.it/900" alt="Random Unsplash"&gt;</code></pre>
+        <pre><code>&lt;img src="https://unsplash.it/900" alt="Random Unsplash"&gt;</code></pre>
       </div>
       <h4>Float</h4>
       <p>You can also float responsive images to fit neatly with your text</p>
@@ -1031,8 +1004,7 @@ function add(x, y) {
         Aenean mauris tellus, facilisis sed quam non, tincidunt rutrum risus. Fusce quam urna, commodo vitae nunc condimentum, efficitur commodo libero. Sed dignissim odio enim, ac pharetra dui laoreet id. Suspendisse nec accumsan erat. Integer sit amet leo arcu. Proin sagittis blandit tempor. Vivamus at egestas lectus. Mauris eros tellus, egestas ac neque eget, lacinia sagittis ante. Phasellus faucibus suscipit erat, eget malesuada neque congue non.
       </p>
       <div class="docs">
-        <pre><code>
-&lt;p&gt;
+        <pre><code>&lt;p&gt;
   &lt;img src="https://unsplash.it/200" class="float-left"&gt;
   Lorem ipsum dolor.......
   &lt;img src="https://unsplash.it/100" class="float-right"&gt;
@@ -1043,8 +1015,7 @@ function add(x, y) {
       <p>If you don't like the default, you can just add the class <code>no-responsive</code> to prevent the image from being responsive. You can also remove the default border with <code>no-border</code>.</p>
       <img src="https://unsplash.it/300" alt="Not responsive Unsplash" class="no-responsive no-border">
       <div class="docs">
-        <pre><code>
-&lt;img src="https://unsplash.it/300" class="no-responsive no-border"&gt;</code></pre>
+        <pre><code>&lt;img src="https://unsplash.it/300" class="no-responsive no-border"&gt;</code></pre>
       </div>
     </div>
     <div id="alerts" class="section">
@@ -1067,8 +1038,7 @@ function add(x, y) {
           </div>
       </div>
       <div class="docs">
-          <pre><code>
-  &lt;div class="row flex-spaces"&gt;
+          <pre><code>  &lt;div class="row flex-spaces"&gt;
     &lt;div class="alert alert-primary"&gt;Alert-primary&lt;/div&gt;
     &lt;div class="alert alert-secondary"&gt;Alert-secondary&lt;/div&gt;
     &lt;div class="alert alert-success"&gt;Alert-success&lt;/div&gt;
@@ -1098,8 +1068,7 @@ function add(x, y) {
       </article>
 
       <div class="docs">
-        <pre><code>
-&lt;article class="article"&gt;
+        <pre><code>&lt;article class="article"&gt;
   &lt;h1 class="article-title"&gt;&lt;a href=""&gt;Article Title&lt;/a&gt;&lt;/h1&gt;
   &lt;p class="article-meta"&gt;Written by &lt;a href="#"&gt;Super User&lt;/a&gt;&lt;/p&gt;
   &lt;p class="text-lead"&gt; Lorem... &lt;/p&gt;
